--- a/src/Header/Header.css
+++ b/src/Header/Header.css
@@ -3,3 +3,23 @@
     width: 100%;
     z-index:100;
 }
+.nav-items a{
+color: white;
+text-decoration: none;
+padding: 0px;
+
+}
+.activeClassName{
+    border-bottom: 2px solid blue;
+}
+.navitems a{
+    text-decoration: none;
+    margin-bottom: 0px;
+    margin-right:15px;
+    font-size: 17px;
+}
+.site-name{
+    text-decoration: none;
+    margin-bottom: 0px;
+
+}
