toggle button added

--- a/src/Header/Header.css
+++ b/src/Header/Header.css
@@ -1,25 +1,18 @@
-.sticky{
-    top: 0;
-    width: 100%;
-    z-index:100;
-}
-.nav-items a{
-color: white;
-text-decoration: none;
-padding: 0px;
 
-}
-.activeClassName{
-    border-bottom: 2px solid blue;
-}
 .navitems a{
     text-decoration: none;
     margin-bottom: 0px;
     margin-right:15px;
     font-size: 17px;
 }
+.navitems a:hover{
+    color: rgb(247, 3, 214);
+}
 .site-name{
     text-decoration: none;
     margin-bottom: 0px;
 
+}
+.activeColor{
+    border-bottom: 3px solid rgb(94, 255, 0);
 }
