--- a/src/LoginRegister/Login.css
+++ b/src/LoginRegister/Login.css
@@ -3,6 +3,7 @@
     margin: 20px auto;
     box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
     padding: 20px;
+    border-radius: 10px;
 }
 
 .login{
