auth context setup done

--- a/src/LoginRegister/Login.css
+++ b/src/LoginRegister/Login.css
@@ -15,7 +15,7 @@
     line-height: 42px;
     letter-spacing: 0.0025em;
     color: #2A414F;
-    border-bottom: 2px solid blue;
+    border-bottom: 3px solid green;
     margin-top: -10px;
 }
 .or{
