footer and header color resolved

--- a/src/Header/Header.css
+++ b/src/Header/Header.css
@@ -4,15 +4,19 @@
     margin-bottom: 0px;
     margin-right:15px;
     font-size: 17px;
+    color: white;
 }
 .navitems a:hover{
-    color: rgb(247, 3, 214);
+    color: rgb(68, 0, 255);
 }
 .site-name{
     text-decoration: none;
     margin-bottom: 0px;
-
+color: rgb(0, 255, 106);
+}
+.site-name:hover{
+    color: #25f77c;
 }
 .activeColor{
-    border-bottom: 3px solid rgb(94, 255, 0);
+    border-bottom: 3px solid rgb(153, 0, 255);
 }
