--- a/src/Pages/Footer.css
+++ b/src/Pages/Footer.css
@@ -1,7 +1,18 @@
-
+.footer{
+    background-image: linear-gradient(to right, #00b09b, #96c93d);
+}
 .footer div a{
 text-decoration: none;
 }
+
 .footer p{
     margin-bottom: 3px;
+}
+
+.footer-icons p{
+background-color: white;
+padding: 8px 13px 8px 13px;
+margin: 5px;
+border-radius: 50px;
+color: rgb(0, 81, 255);
 }
