--- a/src/Pages/Footer.css
+++ b/src/Pages/Footer.css
@@ -1,5 +1,5 @@
 .footer{
-    background-image: linear-gradient(to right, #00b09b, #96c93d);
+    background: #3b4c86;
 }
 .footer div a{
 text-decoration: none;
