--- a/src/Pages/categories/TopCategories.css
+++ b/src/Pages/categories/TopCategories.css
@@ -1,4 +1,6 @@
 .categories-container {
+  /* box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0,
+    rgba(60, 64, 67, 0.15) 0px 2px 6px 2px; */
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
   gap: 0.8rem;
@@ -12,18 +14,25 @@
   align-items: center;
   padding: 1rem 1rem;
   border-radius: 5px;
-  /* background-color: #3b4c86; */
+  text-decoration: none;
   background-color: #b0beee;
+  background-color: #3b4c86;
 }
 
+.category-card:hover {
+  transform: scale(1.03);
+  transition: 0.3s;
+}
 .category-card h4 {
   font-size: 1.5rem;
   font-weight: 500;
   margin: 0;
+  color: gainsboro;
 }
 
 .category-card p {
   margin: 0;
+  color: gainsboro;
 }
 .category-icon {
   font-size: 5rem;
@@ -31,4 +40,5 @@
   padding: 10px;
   font-weight: 700;
   background-color: #fff;
+  color: black;
 }
