--- a/src/courses/courseCard/CourseCard.css
+++ b/src/courses/courseCard/CourseCard.css
@@ -1,16 +1,4 @@
-.text-ellipsis-2{
-    text-overflow:ellipsis;
-    overflow:hidden;
-    display: -webkit-box !important;
-    -webkit-line-clamp: 2;
-    -webkit-box-orient: vertical;
-    white-space: normal;
-  }
-  .description a{
-    color: green;
-font-size: large;
-  }
-  .description:hover a{
-    color: white;
-  }
-  
+.course-cart:hover {
+  box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0,
+    rgba(60, 64, 67, 0.15) 0px 2px 6px 2px;
+}
